// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept svg markup 1`] = `
<vm-icon>
  <!---->
  <svg focusable="false" role="presentation" xmlns="http://www.w3.org/2000/svg">
    <rect height="100" width="300"></rect>
  </svg>
</vm-icon>
`;

exports[`should be structurally sound 1`] = `
<vm-icon href="#my-icon">
  <!---->
  <svg focusable="false" role="presentation" xmlns="http://www.w3.org/2000/svg">
    <use href="#my-icon"></use>
  </svg>
</vm-icon>
`;
